Fix multi-line header spacing

--- a/source/css/2014-12-02-getting-started-with-twitter.css
+++ b/source/css/2014-12-02-getting-started-with-twitter.css
@@ -1,1 +1,3 @@
 .link {fill: none;stroke: #666;stroke-width: 1.5px;}#licensing {fill: green;}.link.licensing {stroke: green;}.link.resolved {stroke-dasharray: 0,2 1;}svg circle {fill: #ccc;stroke: #333;stroke-width: 1.5px;}svg text {font: 16px sans-serif;text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;}.node rect {  cursor: move;  fill-opacity: .9;  shape-rendering: crispEdges;}.node text {  pointer-events: none;  text-shadow: 0 1px 0 #fff;}.link {  fill: none;  stroke: #000;  stroke-opacity: .4;}.link:hover {  stroke-opacity: .8;}.bar text {  fill: white;text-shadow:none;}.axis path, .axis line {  fill: none;  stroke: black;  stroke-width: 2px; shape-rendering: crispEdges;}svg text.profile {cursor:pointer;}
+
+.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6 { line-height: 1.2em; }
